discussion/kv_engine/122336/122336_rev10_discussion.txt
======================================================================================================================
DESCRIPTION:

Add schedule_dcp_step to cookie interface

In order to tighten the logic for when cookies get notified
we'll start off by adding a method which should be used by
DCP in order to make sure that the step() method gets called
again.

This allows us to verify the 1:1 mapping between the engine
returning EWOULDBLOCK and a notify_io_complete, and that DCP
consumers stick to the contract that they need to reserve
the cookie before they can call schedule_dcp_step (and that
they don't use it after they've called release).

Change-Id: I03aa28e14fc2d6dce23cbc1779c956c97225f031

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2020-06-19 08:33:05.000000000
Message: 
Uploaded patch set 10.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-06-19 09:03:24.000000000
Message: 
Patch Set 10: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24686/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/daemon/server_api.cc:240:13:
error: value of type "void" is not contextually convertible to "bool"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24686/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/28662/ : FAILURE

Compile error at ..\kv_engine\daemon\server_api.cc(240): error C2451: conditional expression of type "void" is illegal ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/28662/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2861/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/daemon/server_api.cc:240:13: error: value of type "void" is not contextually convertible to "bool" [clang-diagnostic-error]
        if (thr.notification.push(&cookie.getConnection())) {
            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/daemon/server_api.cc:265:17: error: value of type "void" is not contextually convertible to "bool" [clang-diagnostic-error]
            if (thr.notification.push(&connection)) {
                ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2861/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/daemon/server_api.cc:240:13:
error: value of type "void" is not contextually convertible to "bool" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2861/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/3338/ : FAILURE

Compile error at [2020-06-19T08:42:17.760Z] ../kv_engine/daemon/server_api.cc:240:13:
error: value of type "void" is not contextually convertible to "bool"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/3338/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/4225/ : FAILURE

Compile error at [2020-06-19T08:54:39.703Z] ../kv_engine/daemon/server_api.cc:240:34:
error: could not convert ?thr.FrontEndThread::notification.FrontEndThread::NotificationList::push((&(& cookie)->Cookie::getConnection()))? from ?void? to ?bool?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/4225/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/4287/ : FAILURE

Compile error at [2020-06-19T08:59:37.867Z] ../kv_engine/daemon/server_api.cc:240:34:
error: could not convert ?thr.FrontEndThread::notification.FrontEndThread::NotificationList::push((&(& cookie)->Cookie::getConnection()))? from ?void? to ?bool?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/4287/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/4366/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/12106/ : FAILURE

Compile error at [2020-06-19T08:48:18.629Z] ../kv_engine/daemon/server_api.cc:240:34:
error: could not convert ?thr.FrontEndThread::notification.FrontEndThread::NotificationList::push((&(& cookie)->Cookie::getConnection()))? from ?void? to ?bool?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/12106/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/1366/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2020-08-31 10:13:38.000000000
Message: 
Abandoned
----------------------------------------------------------------------------------------------------------------------
